# mptf_core

./: .gitignore  CHANGELOG.md  CHANGELOG.md.in  CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md  README.md.in
cmake/: mptf_coreConfig.cmake.in
common/: CMakeLists.txt
common/include/: Consts.h  Logger.h  ProjectConfig.h
common/include/Memory/: DBEngineBase.h  DataObject.h  FileManagerBase.h  MemoryStream.h  Storage.h
common/include/Storage/: FileCommon.h  FileSystemCommon.h  IFileSystem.h
common/src/: Logger.cpp
common/src/Memory/: DBEngineBase.cpp  DataObject.cpp  FileManagerBase.cpp  MemoryStream.cpp  Storage.cpp
common/src/Storage/: FileCommon.cpp  FileSystemCommon.cpp
config/: ProjectConfig.h.in  Version.h.in
docs/html/: Consts_8h.html  Consts_8h__dep__incl.map  Consts_8h__dep__incl.md5  Consts_8h_source.html  DBEngineBase_8cpp.html  DBEngineBase_8cpp__incl.map  DBEngineBase_8cpp__incl.md5  DBEngineBase_8h.html  DBEngineBase_8h__dep__incl.map  DBEngineBase_8h__dep__incl.md5  DBEngineBase_8h__incl.map  DBEngineBase_8h__incl.md5  DBEngineBase_8h_source.html  DataObject_8cpp.html  DataObject_8cpp__incl.map  DataObject_8cpp__incl.md5  DataObject_8h.html  DataObject_8h__dep__incl.map  DataObject_8h__dep__incl.md5  DataObject_8h__incl.map  DataObject_8h__incl.md5  DataObject_8h_source.html  FileManagerBase_8cpp.html  FileManagerBase_8cpp__incl.map  FileManagerBase_8cpp__incl.md5  FileManagerBase_8h.html  FileManagerBase_8h__dep__incl.map  FileManagerBase_8h__dep__incl.md5  FileManagerBase_8h__incl.map  FileManagerBase_8h__incl.md5  FileManagerBase_8h_source.html  Logger_8cpp.html  Logger_8cpp__incl.map  Logger_8cpp__incl.md5  Logger_8h.html  Logger_8h__dep__incl.map  Logger_8h__dep__incl.md5  Logger_8h__incl.map  Logger_8h__incl.md5  Logger_8h_source.html  (+147 more)
docs/html/search/: all_1.js  all_10.js  all_3.js  all_4.js  all_5.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_c.js  functions_d.js  functions_f.js  namespaces_0.js  namespaces_1.js  searchdata.js  (+2 more)
docs/xml/: Consts_8h.xml  DBEngineBase_8cpp.xml  DBEngineBase_8h.xml  DataObject_8cpp.xml  DataObject_8h.xml  Doxyfile.xml  FileManagerBase_8cpp.xml  FileManagerBase_8h.xml  Logger_8cpp.xml  Logger_8h.xml  MemoryStream_8cpp.xml  MemoryStream_8h.xml  PlatformEsp32_8cpp.xml  PlatformEsp32_8h.xml  PlatformLinux_8cpp.xml  PlatformLinux_8h.xml  PlatformWindows_8cpp.xml  PlatformWindows_8h.xml  Storage_8cpp.xml  Storage_8h.xml  Version_8h.xml  classLogger.xml  classMemory_1_1DBEngineBase.xml  classMemory_1_1DataObject.xml  classMemory_1_1FileManagerBase.xml  classMemory_1_1MemoryStream.xml  classMemory_1_1StorageBase.xml  dir_11fbc4217d50ab21044e5ad6614aede5.xml  dir_121fc7ce66b883090cdd2aab56ca1101.xml  dir_29d72d0e34289ca24b8e63162d20fa3e.xml  dir_3a887a178c55a31a996f441b8ca49395.xml  dir_4e4d22e38ca4e2e8207825ee2d00bc54.xml  dir_4fa8e684125d7310911828e863c32d8d.xml  dir_59425e443f801f1f2fd8bbe4959a3ccf.xml  dir_62a9390e61e7762d32965a4686e5d3d2.xml  dir_9c2590ae9974cbe0ceb285b04c57dafc.xml  dir_a8db7e141cecc9d0aef55a9458e580b1.xml  dir_bdd9a5d540de89e9fe90efdfc6973a4f.xml  dir_c5a52a81292cf9a5167198f4f346d6d9.xml  dir_cdd4e5728887821d006a7dc50ae31a4f.xml  (+13 more)
include/: Version.h
platform/: CMakeLists.txt
platform/esp32/: CMakeLists.txt
platform/esp32/include/: PlatformEsp32.h
platform/esp32/src/: PlatformEsp32.cpp
platform/linux/: CMakeLists.txt
platform/linux/include/: PlatformLinux.h
platform/linux/src/: PlatformLinux.cpp
platform/windows/: CMakeLists.txt
platform/windows/include/: PlatformWindows.h
platform/windows/src/: PlatformWindows.cpp
scripts/: update_readme.py
tests/: CMakeLists.txt  test_myclass.cpp
